# i76

./: .gitignore  CMakeLists.txt  README.md
cmake/: embed_spv.cmake
docs/: REVERSING.md
src/: main.c
src/engine/: cmdline.c  cmdline.h  font.c  font.h  fs.c  fs.h  gamestate.c  gamestate.h  geomesh.c  geomesh.h  input.c  input.h  loop.c  loop.h  meshcache.c  meshcache.h  meshview.c  meshview.h  pcx.c  pcx.h  strlookup.c  strlookup.h  vfs.c  vfs.h  video.c  video.h  world.c  world.h  zfs.c  zfs.h
src/platform/: platform.h  platform_sdl.c
src/render/: render.h  render_vk.c
src/render/shaders/: blit.frag  blit.vert
tools/: asset_browser.c  smk_dump.c  zfs_dump.c
